# luknn-extended

./: .gitignore  CLAUDE.md  INSTALL.sh  LICENSE  README.md  RESIDUAL_THEORY.md  pyproject.toml  tune_all.sh  tune_all_Proximal.sh  tune_all_STE.sh
analysis/: bootstrap_ci.tex  dlm_tables.tex  lambda_table.tex  stats_revision.py
benchmark/: compare_residual.py  extract_formulas.py  lm_variants_eval.py  proximal_variants_eval.py  retrain_5way.py  retrain_5way_clean.py  retrain_all_optimizers.py  retrain_best.py  retrain_with_fs.py  run_benchmark.py  ste_variants_eval.py  tune_proper.py
configs/: lm_baseline.yaml  lm_heart.yaml  lm_mushroom.yaml  lm_residual_heart.yaml  lm_residual_mushroom.yaml  proximal.yaml  proximal_heart.yaml  proximal_mushroom.yaml  ste.yaml  ste_heart.yaml  ste_mushroom.yaml
data/: README.md
docs/datasets/: benchmark_datasets.md
notebooks/: 01_truth_tables.ipynb  02_mushroom.ipynb  03_heart_disease.ipynb  04_monk.ipynb  05_breast_cancer.ipynb  06_lm_variants.ipynb  06_proximal_variants.ipynb  07_ste_variants.ipynb  08_comparative_report.ipynb  08_comparative_report_exec.ipynb  09_dlm_evaluation.ipynb  10_xgb_feature_selection.ipynb
results/: lm_variants_eval.csv
scripts/: collect_stats.py  dlm_benchmark.py  download_mushroom.py
tests/: test_connectives.py  test_crystallization.py  test_layers.py  test_neuron.py  test_optimizers.py  test_residual.py
tuning/: tune.py  tune_breast_cancer.py  tune_heart.py  tune_monk.py  tune_mushroom.py  tune_proximal.py  tune_proximal_residual.py  tune_ste.py  tune_ste_residual.py
(+181 files in other folders)
