[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luknn"
version = "1.0.0"
description = "Łukasiewicz Neural Networks Extended: residual architectures and crystallization strategies for interpretable rule extraction"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Carlos Leandro", email = "carlos.leandro@solidreturn.dev" }
]
keywords = ["neuro-symbolic", "lukasiewicz", "interpretable-ml", "rule-extraction", "neural-networks"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/CarlosMelroLeandro/luknn-extended"
Repository = "https://github.com/CarlosMelroLeandro/luknn-extended"

[tool.hatch.build.targets.wheel]
packages = ["src/luknn"]
